# rust-n64-gcc-template

./: .gitignore  Cargo.toml  README.md  build.rs  n64.ld  toolchain.sh  wrapper.sh
.cargo/: config.toml
src/: gfx.rs  isv.rs  kernel.S  main.rs  system.rs
